Change Gradle library specifications to single-string GAVs