@@ -13,6 +13,10 @@ allprojects {
         }
     }
 
+    tasks.withType(JavaExec).configureEach {
+        jvmArgs '--enable-native-access=ALL-UNNAMED'
+    }
+
     test {
         useJUnitPlatform()
         testLogging {
@@ -21,6 +25,6 @@ allprojects {
     }
 
     dependencies {
-        testImplementation(group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.5.2')
+        testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.5.2'
     }
 }
